--- a/MicroServises/MicroServises.UserService.csproj
+++ b/MicroServises/MicroServises.UserService.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="MongoDB.Bson" Version="2.20.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.20.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
 </Project>
