--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ClientDataBase": "Data Source=NameOfServer;Initial Catalog=NameOfDb;User ID=Login;Password=Pass;TrustServerCertificate=True"
+  }
 }
